# profile-dashboard

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  init.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ef43d838464c_initial_migration_create_user_and_skill_.py
backend/app/core/: auth.py  settings.py
backend/app/skill/api/: router.py
backend/app/skill/api/v1/: __init__.py  skill.py
backend/app/skill/model/: __init__.py  skill.py
backend/app/skill/schema/: __init__.py  skill.py
backend/app/skill/service/: skill_service.py
backend/app/user/api/: router.py
backend/app/user/api/v1/: user.py
backend/app/user/model/: user.py
backend/app/user/schema/: __init__.py  user.py
backend/app/user/service/: user_service.py
backend/database/: database.py  init.sql  seeder.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: LoginForm.tsx  SkillsRadarChart.tsx  UserAvatar.tsx  UserInfoCard.tsx
frontend/src/pages/: Login.tsx  NotFoundPage.tsx  ProfilePage.tsx
frontend/src/services/: api.ts  auth.ts  user.ts
frontend/src/types/: user.ts
